# Ouroboros

./: .gitignore  main.py  ouroboros.yml  pyproject.toml  requirements.txt
interfaces/: conda_manage_interface.py  docker_manage_interface.py  environment_build_interface.py  help_interface.py  home_interface.py  interface.py  nuitka_build_interface.py  nuitka_packaging_interface.py  setting_interface.py  uv_manage_interface.py
resources/: icon.py  icon.qrc
scripts/: build.bat  build.py  icon.bat
styles/: default.py
utils/: config_util.py  delay_util.py  gui_util.py  icon_util.py  nuitka_util.py  platform_util.py  python_path_util.py  style_util.py
